added non constrained point linking

--- a/tests/utils/geometry/path/CMakeLists.txt
+++ b/tests/utils/geometry/path/CMakeLists.txt
@@ -1,9 +1,5 @@
-add_subdirectory(path)
-
 SET(DGTAL_CONTRIB_TESTS
-  testCurve
-  testCurveProcessor
-  testCurveDecomposition
+  testLinkPoint
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
