Slice utils converted into a class handling digital planes for visu purposes

--- a/tests/utils/geometry/CMakeLists.txt
+++ b/tests/utils/geometry/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(DGTAL_CONTRIB_TESTS
   testCurveProcessor
   testCurveDecomposition
   testMedialAxis
+  testDigitalPlaneProcessor
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
