reworked vcmsurface without inheritance + test

--- a/tests/utils/geometry/CMakeLists.txt
+++ b/tests/utils/geometry/CMakeLists.txt
@@ -6,7 +6,8 @@ SET(DGTAL_CONTRIB_TESTS
   testCurveDecomposition
   testMedialAxis
   testDigitalPlaneProcessor
-  testVCMAdaptableRadius
+  testVCMAdjustableRadius
+  testVCMOnDigitalSurfaceAdjustableRadius
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
