tests completed for all classes + reworked some shape classes without using StdDefs.h

--- a/tests/utils/CMakeLists.txt
+++ b/tests/utils/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_subdirectory(clustering)
 add_subdirectory(geometry)
+add_subdirectory(shapes)
 
 SET(DGTAL_CONTRIB_TESTS
   testStatistics
+  testModeller
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
