--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ link_directories(${DGTAL_LIBRARY_DIRS})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(TEST_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/tests)
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Release)
 
 FIND_PACKAGE(Boost 1.46.0 REQUIRED COMPONENTS)
 if ( Boost_FOUND )
