added example pruning+connectivity

--- a/examples/geometry/CMakeLists.txt
+++ b/examples/geometry/CMakeLists.txt
@@ -1,7 +1,5 @@
 SET(DGTAL_CONTRIB_EXAMPLES
-  OrthogonalPlaneEstimation
-  OrthogonalPlaneEstimationWithCurve
-  PruningSkeletonOrthogonalPlanes
+  EnsureConnectivity
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
