Spherical shell intersection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,8 @@ find_package(DGtal REQUIRED)
 include_directories(${DGTAL_INCLUDE_DIRS})
 link_directories(${DGTAL_LIBRARY_DIRS})
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
-set(TEST_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/tests)
-set(EXAMPLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin/examples)
+set(TEST_OUTPUT_PATH ${CMAKE_BINARY_DIR}/tests)
+set(EXAMPLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/examples)
 #set(CMAKE_BUILD_TYPE Release)
 
 FIND_PACKAGE(Boost 1.46.0 REQUIRED COMPONENTS)
