added SetProcessor class for set related operations

--- a/tests/geometry/CMakeLists.txt
+++ b/tests/geometry/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(DGTAL_CONTRIB_TESTS
   testVCMOnDigitalSurfaceAdjustableRadius
   testMorphomaths
   testSphericalShellIntersection
+  testSetProcessor
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
