first skeletonization version (WIP)'

--- a/examples/vcm/CMakeLists.txt
+++ b/examples/vcm/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(DGTAL_CONTRIB_EXAMPLES
   OrthogonalPlaneEstimation
   OrthogonalPlaneEstimationWithCurve
   PruningSkeletonOrthogonalPlanes
+  SkeletonOrthogonalPlanes
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
