reworked skeletonization + cutting plane estimation

--- a/tests/vcm/CMakeLists.txt
+++ b/tests/vcm/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(skeleton)
 SET(DGTAL_CONTRIB_TESTS
   testVCMAdjustableRadius
   testVCMOnDigitalSurfaceAdjustableRadius
+  testCuttingPlanes
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
