--- a/tests/vcm/CMakeLists.txt
+++ b/tests/vcm/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(DGTAL_CONTRIB_TESTS
   testVCMAdjustableRadius
   testVCMOnDigitalSurfaceAdjustableRadius
   testCuttingPlanes
+  testRecenterSkeleton
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
