--- a/tests/geometry/CMakeLists.txt
+++ b/tests/geometry/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(DGTAL_CONTRIB_TESTS
   testSetProcessor
   testPointUtil
   testMultiPathThinner
+  testDistanceToMeasure
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
