Visu slice with mouse picking + border extraction in SegmentationAnnulus

--- a/tests/vcm/CMakeLists.txt
+++ b/tests/vcm/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(DGTAL_CONTRIB_TESTS
   testVCMOnDigitalSurfaceAdjustableRadius
   testCuttingPlanes
   testRecenterSkeleton
+  testSegmentationAnnulus
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_TESTS})
