shape descriptor + delta distance edge

--- a/examples/geometry/CMakeLists.txt
+++ b/examples/geometry/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(DGTAL_CONTRIB_EXAMPLES
   EnsureConnectivity
   DeltaDistance
+  DeltaDistanceEdge
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
