tubular criterion based on vector compensation

--- a/examples/vcm/CMakeLists.txt
+++ b/examples/vcm/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(DGTAL_CONTRIB_EXAMPLES
   SkeletonOrthogonalPlanes
   RecenterSkeletonPoints
   VisuSlicesFromSkeleton
+  DeltaVCM
   )
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
