Gaussian derivative operator

--- a/tests/hessian/CMakeLists.txt
+++ b/tests/hessian/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(DGTAL_CONTRIB_TESTS
         testDerivativeOperator
+        testGaussianDerivativeOperator
         )
 
 FOREACH (FILE ${DGTAL_CONTRIB_TESTS})
