Recursive gaussian image

--- a/tests/hessian/CMakeLists.txt
+++ b/tests/hessian/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(DGTAL_CONTRIB_TESTS
         testDerivativeOperator
         testGaussianDerivativeOperator
         testDiscreteHessianFunction
+        testRecursiveGaussianDerivativeOperator
         )
 
 FOREACH (FILE ${DGTAL_CONTRIB_TESTS})
