Working hessian + frangi vesselness with recursive gaussian (speedup*100)

--- a/tests/hessian/CMakeLists.txt
+++ b/tests/hessian/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(DGTAL_CONTRIB_TESTS
         testGaussianDerivativeOperator
         testDiscreteHessianFunction
         testRecursiveGaussianDerivativeOperator
+        testHessianRecursiveGaussian
         )
 
 FOREACH (FILE ${DGTAL_CONTRIB_TESTS})
