--- a/examples/hessian/CMakeLists.txt
+++ b/examples/hessian/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(DGTAL_CONTRIB_EXAMPLES
         HessianImage
         FrangiImage
+        MultiscaleVesselnessImage
         )
 
 FOREACH (FILE ${DGTAL_CONTRIB_EXAMPLES})
