--- a/examples/vcm/CMakeLists.txt
+++ b/examples/vcm/CMakeLists.txt
@@ -4,6 +4,10 @@ SET(DGTAL_CONTRIB_EXAMPLES
         PruningSkeletonOrthogonalPlanes
         SkeletonOrthogonalPlanes
         RecenterSkeletonPoints
+        VisuSlicesFromSkeleton
+        VCMTubularCriterion
+        DeltaVCM
+        DeltaDistanceVCMVesselness
         )
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
