Breadth for tubular criterion

--- a/examples/geometry/CMakeLists.txt
+++ b/examples/geometry/CMakeLists.txt
@@ -16,8 +16,8 @@ if(WITH_ITK)
     VisuDeltaDistance
     HessianLocalAdaptative
     HessianLocalAdaptative3D
-    MultiscaleVesselness
-    MultiscaleVesselnessUniqueImage
+    # MultiscaleVesselness
+    # MultiscaleVesselnessUniqueImage
     MyHessianLocalAdaptative3D
     BarycenterRegistration
     ExportToGraph
@@ -30,7 +30,7 @@ endif(WITH_ITK)
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
   add_executable(${FILE} ${FILE})
-  target_link_libraries(${FILE} DGtal DGtalIO ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY}
+  target_link_libraries(${FILE} DGtal ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY}
     ${Boost_SYSTEM_LIBRARY})
   set_target_properties( ${FILE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXAMPLE_OUTPUT_PATH} )
 ENDFOREACH(FILE)
