--- a/examples/vcm/CMakeLists.txt
+++ b/examples/vcm/CMakeLists.txt
@@ -14,6 +14,6 @@ SET(DGTAL_CONTRIB_EXAMPLES
 
 FOREACH(FILE ${DGTAL_CONTRIB_EXAMPLES})
   add_executable(${FILE} ${FILE})
-  target_link_libraries (${FILE} DGtal ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY})
+  target_link_libraries (${FILE} DGtal ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
   set_target_properties( ${FILE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXAMPLE_OUTPUT_PATH} )
 ENDFOREACH(FILE)
